@@ -87,15 +87,14 @@ used.
      access flags to allow users to modify them.
 
 --enable-mandirs=OS
-     By  default, man-db-2.4.x supports manual page directo-
-     ries in any of several layouts used by free and propri-
-     etary  versions  of  UNIX.   However, in certain cases,
-     this can cause man-db-2.4.x to find the wrong  page  by
-     mistake, especially when the names of some manual pages
-     on the system contain periods.  Use this option with an
-     argument  of  GNU, HPUX, Solaris, or IRIX (or more than
-     one of these, separated by commas) to support only  the
-     layouts typically used on each of those systems.
+     By default, man-db supports manual page directories  in  any  of  several
+     layouts  used by free and proprietary versions of UNIX.  However, in cer-
+     tain cases, this can cause man-db to find  the  wrong  page  by  mistake,
+     especially  when  the  names  of  some manual pages on the system contain
+     periods.  Use this option with an argument of GNU, HPUX,  IRIX,  Solaris,
+     or  BSD  (or more than one of these, separated by commas) to support only
+     the layouts typically used on each of those systems.  Note that man-db is
+     not currently capable of writing cat pages in the proper BSD layout.
 
 --with-device=DEVICE
      Use  this  flag to alter the default output device used
