@@ -271,9 +271,11 @@ used by free and proprietary versions of \*U.
 However, in certain cases, this can cause \*M to find the wrong page by
 mistake, especially when the names of some manual pages on the system
 contain periods.
-Use this option with an argument of GNU, HPUX, Solaris, or IRIX (or more
-than one of these, separated by commas) to support only the layouts
+Use this option with an argument of GNU, HPUX, IRIX, Solaris, or BSD
+(or more than one of these, separated by commas) to support only the layouts
 typically used on each of those systems.
+Note that \*M is not currently capable of writing cat pages in the proper
+BSD layout.
 .ip \-\-with\-device=DEVICE
 Use this flag to alter the default output device used by \*N. DEVICE is
 passed to \*N with the \-T option.
